[package]
name = "proto"
description = ""

version.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openraft = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-build = { workspace = true }
dashmap = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
redb = { workspace = true }
byteorder = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
bio = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
maplit = { workspace = true }
tempfile = { workspace = true }
serial_test = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }
tonic-build = { workspace = true }
